ev_site_macros/tests/fail/multiple_violations.stderr
error: tier P1 equals enclosing tier; omit `tier:` to inherit from parent
 --> tests/fail/multiple_violations.rs:7:14
  |
7 |             A { tier: P1 }
  |                       ^^
  |
  = note: -Ztrack-diagnostics: created at /rustc-dev/8b03437a8ffc8f8b01e62ef5fce82a37ada09b12/compiler/rustc_builtin_macros/src/compile_error.rs:22:25

error: tier P0 must be strictly greater than enclosing tier P1
 --> tests/fail/multiple_violations.rs:8:14
  |
8 |             B { tier: P0 }
  |                       ^^
  |
  = note: -Ztrack-diagnostics: created at /rustc-dev/8b03437a8ffc8f8b01e62ef5fce82a37ada09b12/compiler/rustc_builtin_macros/src/compile_error.rs:22:25
